# ffmpeg-ogl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  video_reader.cpp  video_reader.h
